comments and readme updates

--- a/src/data_collection.ipynb
+++ b/src/data_collection.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cd35089ffc16c9de311d97795795d9e4a01f65eabb0380f64a6b99f508aa7ec5"
+  "signature": "sha256:147e4c0672c59acb25844a1b3e8e359d3963c3d891348f9a5514855b0ad6359d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,12 +17,12 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Fetches 300 followers of each brand and puts it to MongoDB \n",
+      "You may also run [process_followers,process_friends] code across diffrent node , to speed up the data collection"
+     ]
     },
     {
      "cell_type": "code",
