--- a/src/data_processing.ipynb
+++ b/src/data_processing.ipynb
@@ -1,13 +1,31 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2739d8c6906f5fa8dabec5416a432e84872560b7b403ea25d03dcc5803782e5b"
+  "signature": "sha256:19e1466303292bd6d54979784cca3d39073ebafe596a1d161d0e8e0651cdc2b8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "\n",
+      "Data Processing"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Used to process output data from datacollection.ipynb\n",
+      "You should run datacollection.ipynb before running this notebook or\n",
+      "you may downlod the output data (http://tapi.cs.iit.edu/data/aaai-2015-demographics/2014-11-22/) and run this notebook"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -16,12 +34,11 @@
       "import pickle\n",
       "username2brand = pickle.load(open('username2brand.pkl', 'rb'))\n",
       "id2brand = pickle.load(open('id2brand.pkl', 'rb'))\n",
-      "brand2counts = pickle.load(open('brand2counts.pkl', 'rb'))\n"
+      "brand2counts = pickle.load(open('brand2counts.pkl', 'rb'))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "code",
