update docs for data collection

--- a/src/data_collection.ipynb
+++ b/src/data_collection.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:147e4c0672c59acb25844a1b3e8e359d3963c3d891348f9a5514855b0ad6359d"
+  "signature": "sha256:6f8ec8d8cadf4f1e2969732ccd907ef6a1aec5e010f21d6883aa66e7e0091dc4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,8 +20,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Fetches 300 followers of each brand and puts it to MongoDB \n",
-      "You may also run [process_followers,process_friends] code across diffrent node , to speed up the data collection"
+      "Here we provide code used to collect Twitter data for our [AAAI paper](http://www.cs.iit.edu/~culotta/pubs/culotta15predicting.pdf).\n",
+      "\n",
+      "Note that to this is a long running process (days) and may result in data that differs from that in the original paper. So, if you're interested in reproducing the results, I'd instead start with the [data_processing.ipynb](https://github.com/tapilab/aaai-2015-demographics/blob/master/src/data_processing.ipynb) notebook.\n",
+      "\n",
+      "For each brand in [brands.json](https://github.com/tapilab/aaai-2015-demographics/blob/master/data/brands.json), we collect 300 *followers*. For each of these followers, we collect up to 5,000 of their *friends* (i.e., users they follow).\n",
+      "\n",
+      "The results are stored in three pickle files:\n",
+      "\n",
+      "- `username2brand.pkl`: a dict from Twitter handle to brand demographics.\n",
+      "- `id2brand.pkl`: a dict from Twitter user id to brand.\n",
+      "- `brand2counts.pkl`: a dict from brand Twitter id to a Counter object. The Counter object is a dict from Twitter ID to count, representing the number times a follower of brand X is friends with user Y. E.g., `{123: {456: 10, 789: 5}}` means that of the users who follow 123, 10 also follow 456 and 5 also follow 789.\n",
+      "\n",
+      "MongoDB is used to store data for intermediate computations. You may want to distribute calls to `process_followers` and `process_friends` for efficiency."
      ]
     },
     {
