--- a/src/data_processing.ipynb
+++ b/src/data_processing.ipynb
@@ -21,7 +21,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Reproduce results of our [AAAI paper]((http://www.cs.iit.edu/~culotta/pubs/culotta15predicting.pdf)."
+      "Reproduce results of our [AAAI paper](http://www.cs.iit.edu/~culotta/pubs/culotta15predicting.pdf)."
      ]
     },
     {
